# sensorimotor-world-model

./: .gitignore  LICENSE  README.md  pyproject.toml
planning/: README.md  eval.py  jepa.py  module.py  plot_style.py  train.py  utils.py
planning/config/eval/: base.yaml
planning/config/train/: base.yaml
planning/experiments/embedding_analysis/: README.md  analyze_learned_representations.ipynb  config.yaml  export_embeddings.py  generate_config.py  physical_quantity_probe_table.ipynb  run.sh
planning/experiments/horizon_sweep/: README.md  aggregate_results.py  aggregated_results.csv  generate_configs.py  plot_results.ipynb  run.sh
planning/experiments/lambda_sweep/: README.md  plot_results.ipynb
planning/experiments/planning_eval/: README.md  aggregate_results.py  aggregated_results.csv  generate_configs.py  plot_results.ipynb  run.sh
planning/experiments/train/: README.md  generate_configs.py  run.sh
planning/scripts/: create_randomized_transition_datasets.py  make_episode_splits.py
toy/: README.md  models.py  train.py  train_decoder.py
toy/config/: decoder_base.yaml  dot_base.yaml  sprite_base.yaml
toy/datasets/: sprite_world.py  structured_dot_world.py
toy/experiments/single_dot/: analyze.ipynb  config.yaml  config_lambda0.yaml  run.sh
toy/experiments/sprite_decoder/: analyze.ipynb  config_decoder_none.yaml  config_decoder_x.yaml  config_decoder_xy.yaml  config_decoder_xyt.yaml  config_none.yaml  config_x.yaml  config_xy.yaml  (+4 more)
toy/misc/: plot_style.py
toy/notebooks/: sprite_world_visualization.ipynb  structured_dot_world_visualization.ipynb
(+25 files in other folders)
