[project]
name = "sensorimotor-world-model"
version = "0.1.0"
description = "Sensorimotor world models with a joint forward + inverse-dynamics objective"
requires-python = ">=3.13"
dependencies = [
    # toy/ — dot-world / sprite experiments (CPU-friendly)
    "torch>=2.2",
    "numpy>=1.26",
    "pandas>=3.0.1",
    "matplotlib>=3.10.8",
    "pyyaml>=6.0",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    # planning/ — LeWM-based planning experiments (needs a CUDA GPU to run)
    "stable-worldmodel[train,env]==0.0.6",
    "stable-pretraining==0.1.6",
    "gym-pusht==0.1.6",
    "pymunk<7",
    "opencv-python-headless",
    "einops",
    "hydra-core",
    "omegaconf",
    "wandb",
    "h5py",
    "scikit-learn",
    "tqdm",
    "datasets>=2.0,<3",
    "pyarrow<21",
]

[tool.uv]
package = false
override-dependencies = ["opencv-python-headless"]
constraint-dependencies = ["opencv-python-headless"]
